@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: tables.c,v 1.89 2008/11/01 03:48:52 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: tables.c,v 1.90 2008/11/15 19:38:55 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - tables.c */
@@ -41,6 +41,7 @@ static char *RCSid() { return RCSid("$Id: tables.c,v 1.89 2008/11/01 03:48:52 sf
 #include "setshow.h"
 #include "term_api.h"
 #include "util.h"
+#include "alloc.h"	/* for init_colornames() */
 # include "getcolor.h"
 
 /* gnuplot commands */
@@ -483,106 +484,141 @@ const struct gen_table set_pm3d_tbl[] =
     { NULL, S_PM3D_INVALID }
 };
 
-/* fixed RGB color names for 'set palette defined' */
-const struct gen_table pm3d_color_names_tbl[] =
+/* EAM Nov 2008 - RGB color names for 'set palette defined'
+ * merged with colors from web_color_rgbs used by terminals.
+ */
+struct gen_table default_color_names_tbl[] =
 {
-    /* black, white and gray/grey */
+    /* Put the colors used by gd/pdf/ppm terminals first */
+
     { "white"           , 255*(1<<16) + 255*(1<<8) + 255 },
     { "black"           ,   0*(1<<16) +   0*(1<<8) +   0 },
-    { "gray0"           ,   0*(1<<16) +   0*(1<<8) +   0 },
-    { "grey0"           ,   0*(1<<16) +   0*(1<<8) +   0 },
-    { "gray10"          ,  26*(1<<16) +  26*(1<<8) +  26 },
-    { "grey10"          ,  26*(1<<16) +  26*(1<<8) +  26 },
-    { "gray20"          ,  51*(1<<16) +  51*(1<<8) +  51 },
-    { "grey20"          ,  51*(1<<16) +  51*(1<<8) +  51 },
-    { "gray30"          ,  77*(1<<16) +  77*(1<<8) +  77 },
-    { "grey30"          ,  77*(1<<16) +  77*(1<<8) +  77 },
-    { "gray40"          , 102*(1<<16) + 102*(1<<8) + 102 },
-    { "grey40"          , 102*(1<<16) + 102*(1<<8) + 102 },
-    { "gray50"          , 127*(1<<16) + 127*(1<<8) + 127 },
-    { "grey50"          , 127*(1<<16) + 127*(1<<8) + 127 },
-    { "gray60"          , 153*(1<<16) + 153*(1<<8) + 153 },
-    { "grey60"          , 153*(1<<16) + 153*(1<<8) + 153 },
-    { "gray70"          , 179*(1<<16) + 179*(1<<8) + 179 },
-    { "grey70"          , 179*(1<<16) + 179*(1<<8) + 179 },
-    { "gray80"          , 204*(1<<16) + 204*(1<<8) + 204 },
-    { "grey80"          , 204*(1<<16) + 204*(1<<8) + 204 },
-    { "gray90"          , 229*(1<<16) + 229*(1<<8) + 229 },
-    { "grey90"          , 229*(1<<16) + 229*(1<<8) + 229 },
-    { "gray100"         , 255*(1<<16) + 255*(1<<8) + 255 },
-    { "grey100"         , 255*(1<<16) + 255*(1<<8) + 255 },
-    { "gray"            , 190*(1<<16) + 190*(1<<8) + 190 },
-    { "grey"            , 190*(1<<16) + 190*(1<<8) + 190 },
-    { "light-gray"      , 211*(1<<16) + 211*(1<<8) + 211 },
-    { "light-grey"      , 211*(1<<16) + 211*(1<<8) + 211 },
-    { "dark-gray"       , 169*(1<<16) + 169*(1<<8) + 169 },
-    { "dark-grey"       , 169*(1<<16) + 169*(1<<8) + 169 },
-    /* red */
+    { "dark-grey"       , 160*(1<<16) + 160*(1<<8) + 160 },
     { "red"             , 255*(1<<16) +   0*(1<<8) +   0 },
-    { "light-red"       , 240*(1<<16) +  50*(1<<8) +  50 },
-    { "dark-red"        , 139*(1<<16) +   0*(1<<8) +   0 },
-    /* yellow */
-    { "yellow"          , 255*(1<<16) + 255*(1<<8) +   0 },
-    { "light-yellow"    , 255*(1<<16) + 255*(1<<8) + 224 },
+    { "web-green"       ,   0*(1<<16) + 192*(1<<8) +   0 },
+    { "web-blue"        ,   0*(1<<16) + 128*(1<<8) + 255 },
+    { "dark-magenta"    , 192*(1<<16) +   0*(1<<8) + 255 },
+    { "dark-cyan"       ,   0*(1<<16) + 238*(1<<8) + 238 },
+    { "dark-orange"     , 192*(1<<16) +  64*(1<<8) +   0 },
     { "dark-yellow"     , 200*(1<<16) + 200*(1<<8) +   0 },
-    /* green */
-    { "green"           ,   0*(1<<16) + 255*(1<<8) +   0 },
+    { "royalblue"       ,  65*(1<<16) + 105*(1<<8) + 225 },
+    { "goldenrod"       , 255*(1<<16) + 192*(1<<8) +  32 },
+    { "dark-spring-green",  0*(1<<16) + 128*(1<<8) +  64 },
+    { "purple"          , 192*(1<<16) + 128*(1<<8) + 255 },
+    { "steelblue"       ,  48*(1<<16) +  96*(1<<8) + 128 },
+    { "dark-red"        , 139*(1<<16) +   0*(1<<8) +   0 },
+    { "dark-chartreuse" ,  64*(1<<16) + 128*(1<<8) +   0 },
+    { "orchid"          , 255*(1<<16) + 128*(1<<8) + 255 },
+    { "aquamarine"      , 127*(1<<16) + 255*(1<<8) + 212 },
+    { "brown"           , 165*(1<<16) +  42*(1<<8) +  42 },
+    { "yellow"          , 255*(1<<16) + 255*(1<<8) +   0 },
+    { "turquoise"       ,  64*(1<<16) + 224*(1<<8) + 208 },
+
+    /* greyscale gradient */
+
+    { "grey0"           ,   0*(1<<16) +   0*(1<<8) +   0 },
+    { "grey10"          ,  26*(1<<16) +  26*(1<<8) +  26 },
+    { "grey20"          ,  51*(1<<16) +  51*(1<<8) +  51 },
+    { "grey30"          ,  77*(1<<16) +  77*(1<<8) +  77 },
+    { "grey40"          , 102*(1<<16) + 102*(1<<8) + 102 },
+    { "grey50"          , 127*(1<<16) + 127*(1<<8) + 127 },
+    { "grey60"          , 153*(1<<16) + 153*(1<<8) + 153 },
+    { "grey70"          , 179*(1<<16) + 179*(1<<8) + 179 },
+    { "grey"            , 192*(1<<16) + 192*(1<<8) + 192 },
+    { "grey80"          , 204*(1<<16) + 204*(1<<8) + 204 },
+    { "grey90"          , 229*(1<<16) + 229*(1<<8) + 229 },
+    { "grey100"         , 255*(1<<16) + 255*(1<<8) + 255 },
+
+    /* random other colors */
+
+    { "light-red"       , 240*(1<<16) +  50*(1<<8) +  50 },
     { "light-green"     , 144*(1<<16) + 238*(1<<8) + 144 },
+    { "light-blue"      , 173*(1<<16) + 216*(1<<8) + 230 },
+    { "light-magenta"   , 240*(1<<16) +  85*(1<<8) + 240 },
+    { "light-cyan"      , 224*(1<<16) + 255*(1<<8) + 255 },
+    { "light-goldenrod" , 238*(1<<16) + 221*(1<<8) + 130 },
+    { "light-pink"      , 255*(1<<16) + 182*(1<<8) + 193 },
+    { "light-turquoise" , 175*(1<<16) + 238*(1<<8) + 238 },
+    { "gold"            , 255*(1<<16) + 215*(1<<8) +   0 },
+    { "green"           ,   0*(1<<16) + 255*(1<<8) +   0 },
     { "dark-green"      ,   0*(1<<16) + 100*(1<<8) +   0 },
     { "spring-green"    ,   0*(1<<16) + 255*(1<<8) + 127 },
     { "forest-green"    ,  34*(1<<16) + 139*(1<<8) +  34 },
     { "sea-green"       ,  46*(1<<16) + 139*(1<<8) +  87 },
-    /* blue */
     { "blue"            ,   0*(1<<16) +   0*(1<<8) + 255 },
-    { "light-blue"      , 173*(1<<16) + 216*(1<<8) + 230 },
     { "dark-blue"       ,   0*(1<<16) +   0*(1<<8) + 139 },
     { "midnight-blue"   ,  25*(1<<16) +  25*(1<<8) + 112 },
     { "navy"            ,   0*(1<<16) +   0*(1<<8) + 128 },
     { "medium-blue"     ,   0*(1<<16) +   0*(1<<8) + 205 },
-    { "royalblue"       ,  65*(1<<16) + 105*(1<<8) + 225 },
     { "skyblue"         , 135*(1<<16) + 206*(1<<8) + 235 },
-    /* cyan */
     { "cyan"            ,   0*(1<<16) + 255*(1<<8) + 255 },
-    { "light-cyan"      , 224*(1<<16) + 255*(1<<8) + 255 },
-    { "dark-cyan"       ,   0*(1<<16) + 139*(1<<8) + 139 },
-    /* magenta */
     { "magenta"         , 255*(1<<16) +   0*(1<<8) + 255 },
-    { "light-magenta"   , 240*(1<<16) +  85*(1<<8) + 240 },
-    { "dark-magenta"    , 139*(1<<16) +   0*(1<<8) + 139 },
-    /* turquoise */
-    { "turquoise"       ,  64*(1<<16) + 224*(1<<8) + 208 },
-    { "light-turquoise" , 175*(1<<16) + 238*(1<<8) + 238 },
     { "dark-turquoise"  ,   0*(1<<16) + 206*(1<<8) + 209 },
-    /* pink */
-    { "pink"            , 255*(1<<16) + 192*(1<<8) + 203 },
-    { "light-pink"      , 255*(1<<16) + 182*(1<<8) + 193 },
     { "dark-pink"       , 255*(1<<16) +  20*(1<<8) + 147 },
-    /* coral */
     { "coral"           , 255*(1<<16) + 127*(1<<8) +  80 },
     { "light-coral"     , 240*(1<<16) + 128*(1<<8) + 128 },
     { "orange-red"      , 255*(1<<16) +  69*(1<<8) +   0 },
-    /* salmon */
     { "salmon"          , 250*(1<<16) + 128*(1<<8) + 114 },
-    { "light-salmon"    , 255*(1<<16) + 160*(1<<8) + 122 },
     { "dark-salmon"     , 233*(1<<16) + 150*(1<<8) + 122 },
-    /* some more */
-    { "aquamarine"      , 127*(1<<16) + 255*(1<<8) + 212 },
     { "khaki"           , 240*(1<<16) + 230*(1<<8) + 140 },
     { "dark-khaki"      , 189*(1<<16) + 183*(1<<8) + 107 },
-    { "goldenrod"       , 218*(1<<16) + 165*(1<<8) +  32 },
-    { "light-goldenrod" , 238*(1<<16) + 221*(1<<8) + 130 },
     { "dark-goldenrod"  , 184*(1<<16) + 134*(1<<8) +  11 },
-    { "gold"            , 255*(1<<16) + 215*(1<<8) +   0 },
     { "beige"           , 245*(1<<16) + 245*(1<<8) + 220 },
-    { "brown"           , 165*(1<<16) +  42*(1<<8) +  42 },
+    { "olive"           , 160*(1<<16) + 128*(1<<8) +  32 },
     { "orange"          , 255*(1<<16) + 165*(1<<8) +   0 },
-    { "dark-orange"     , 255*(1<<16) + 140*(1<<8) +   0 },
     { "violet"          , 238*(1<<16) + 130*(1<<8) + 238 },
     { "dark-violet"     , 148*(1<<16) +   0*(1<<8) + 211 },
     { "plum"            , 221*(1<<16) + 160*(1<<8) + 221 },
-    { "purple"          , 160*(1<<16) +  32*(1<<8) + 240 },
+    { "dark-plum"       , 144*(1<<16) +  80*(1<<8) +  64 },
+    { "dark-olivegreen" ,  85*(1<<16) + 107*(1<<8) +  47 },
+
+    { "orangered4"      , 128*(1<<16) +  20*(1<<8) +   0 },
+    { "brown4"          , 128*(1<<16) +  20*(1<<8) +  20 },
+    { "sienna4"         , 128*(1<<16) +  64*(1<<8) +  20 },
+    { "orchid4"         , 128*(1<<16) +  64*(1<<8) + 128 },
+    { "mediumpurple3"   , 128*(1<<16) +  96*(1<<8) + 192 },
+    { "slateblue1"      , 128*(1<<16) +  96*(1<<8) + 255 },
+    { "yellow4"         , 128*(1<<16) + 128*(1<<8) +   0 },
+    { "sienna1"         , 255*(1<<16) + 128*(1<<8) +  64 },
+    { "tan1"            , 255*(1<<16) + 160*(1<<8) +  64 },
+    { "sandybrown"      , 255*(1<<16) + 160*(1<<8) +  96 },
+    { "light-salmon"    , 255*(1<<16) + 160*(1<<8) + 112 },
+    { "pink"            , 255*(1<<16) + 192*(1<<8) + 192 },
+    { "khaki1"          , 255*(1<<16) + 255*(1<<8) + 128 },
+    { "lemonchiffon"    , 255*(1<<16) + 255*(1<<8) + 192 },
+    { "bisque"          , 205*(1<<16) + 183*(1<<8) + 158 },
+    { "honeydew"        , 240*(1<<16) + 255*(1<<8) + 240 },
+    { "slategrey"       , 160*(1<<16) + 182*(1<<8) + 205 },
+    { "seagreen"        , 193*(1<<16) + 255*(1<<8) + 193 },
+    { "antiquewhite"    , 205*(1<<16) + 192*(1<<8) + 176 },
+    { "chartreuse"      , 124*(1<<16) + 255*(1<<8) +  64 },
+    { "greenyellow"     , 160*(1<<16) + 255*(1<<8) +  32 },
+
+    /* Synonyms */
+    { "gray"            , 190*(1<<16) + 190*(1<<8) + 190 },
+    { "light-gray"      , 211*(1<<16) + 211*(1<<8) + 211 },
+    { "light-grey"      , 211*(1<<16) + 211*(1<<8) + 211 },
+    { "dark-gray"       , 160*(1<<16) + 160*(1<<8) + 160 },
+    { "slategray"       , 160*(1<<16) + 182*(1<<8) + 205 },
+    { "gray0"           ,   0*(1<<16) +   0*(1<<8) +   0 },
+    { "gray10"          ,  26*(1<<16) +  26*(1<<8) +  26 },
+    { "gray20"          ,  51*(1<<16) +  51*(1<<8) +  51 },
+    { "gray30"          ,  77*(1<<16) +  77*(1<<8) +  77 },
+    { "gray40"          , 102*(1<<16) + 102*(1<<8) + 102 },
+    { "gray50"          , 127*(1<<16) + 127*(1<<8) + 127 },
+    { "gray60"          , 153*(1<<16) + 153*(1<<8) + 153 },
+    { "gray70"          , 179*(1<<16) + 179*(1<<8) + 179 },
+    { "gray80"          , 204*(1<<16) + 204*(1<<8) + 204 },
+    { "gray90"          , 229*(1<<16) + 229*(1<<8) + 229 },
+    { "gray100"         , 255*(1<<16) + 255*(1<<8) + 255 },
     { NULL, -1 }
 };
+struct gen_table *pm3d_color_names_tbl = default_color_names_tbl;
+struct gen_table *user_color_names_tbl = NULL;
+const int num_predefined_colors = sizeof(default_color_names_tbl)
+				/ sizeof(struct gen_table);
+int num_userdefined_colors = 0;
+
 
 const struct gen_table show_style_tbl[] =
 {
